########################################
# uHTTP
########################################

uhttp_header = \
	cybergarage/typedef.h \
	cybergarage/io/cfile.h \
	cybergarage/util/clist.h \
	cybergarage/util/cmutex.h \
	cybergarage/util/ccond.h \
	cybergarage/util/cdictionary.h \
	cybergarage/util/cstring.h \
	cybergarage/util/cthread.h \
	cybergarage/util/ctime.h \
	cybergarage/util/clog.h \
	cybergarage/net/csocket.h \
	cybergarage/net/cinterface.h \
	cybergarage/net/curi.h \
	cybergarage/net/curl.h \
	cybergarage/http/chttp.h

########################################
# Library
########################################

nobase_include_HEADERS = \
	$(uhttp_header)
